# FftBuffer

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
FftBuffer/: FftBuffer.jucer
FftBuffer/Source/: LockFreeQueue.cpp  LockFreeQueue.h  OlaBuffer.cpp  OlaBuffer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleOlaProcessor.cpp  SimpleOlaProcessor.h  Transport.h
prototyping/: EnvelopeFollower.m  OlaBuffer.m  main.m  runEnvelopeFollower.m  runOlaBuffer.m
